--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>this is the header</h1>
         <p>dead paragraphe</p>
         <p>first commit</p>
+        <p>second commit</p>
     </body>
 </html>
