commit after lite server

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <p>dead paragraphe</p>
         <p>first commit</p>
         <p>second commit</p>
+        <p>testing tite server</p>
     </body>
 </html>
